# PyPenguin

./: .gitignore  2.py  BTW.md  DOCUMENTATION.md  Optimized Format Documentation.md  README.md  TODOs.md  corr.json  database_converter.py  deoptimized.pmp  export.pmp  export.sb3  extractionTest.py  input value doc.txt  mem.txt  monitor docs.txt  pyproject.toml  pyproject_old.toml  setup.py  structure.txt  t_deop.json  t_finished.json  t_source.json  temp.json  temp.py  temp2.json  temp3.json  temp_wrong.json  test.py
.github/workflows/: publish.yml
assets/: asset_db.json  asset_links.json  deoptimized.json  opcode_database.jsonc  optimized.json  optimized2.json  project.json  temp.jsonc  test.json
assets/categories/: control.pmp  custom_blocks.pmp  events.pmp  extension_bitwise.pmp  extension_files.pmp  extension_json.pmp  extension_makey_makey.pmp  extension_music.pmp  extension_pen.pmp  extension_text.pmp  extension_text_to_speech.pmp  extension_translate.pmp  extension_video_sensing.pmp  link_bitwise.pmp  looks.pmp  looks_old.pmp  motion.pmp  operators.pmp  sensing.pmp  sensing_p1.pmp  sensing_p2.pmp  sensing_p3.pmp  sensing_p4.pmp  sensing_p5.pmp  sensing_p6.pmp  sensing_p7.pmp  sounds.pmp  tw_temporary_variables.pmp  variables and lists.pmp
assets/special/: illustration.pmp
assets/studies/: VarsLists.json  VarsLists.pmp  allMonitors.pmp  allProcedureCalls.pmp  allProcedures.pmp  assetTest.pmp  broadcastTest.pmp  commentTest.pmp  commentTest.sb3  comparators.pmp  corection.pmp  correction.pmp  currentValueTest.pmp  empty.json  (+47 more)
automation/: main.py  out.md
btt/: project.json
docs/: DOCUMENTATION.md  asset_links.md  assets.md  comments.md  extensions.md  main.md  main_new.md  monitors.md  opcodes.md  other.md  scripts.md  sprites.md  sprites_new.py  variables_lists.md
extractedProject/: project.json
extracted_project/: project.json
optimizedProject/: project.json
pong/: project.json
project/: project.json
src/: block_text_test.py  broadcasts.pmp  code.txt  compress.py  creation_test.py  database.py  deoptimize_and_compress.py  deoptimized.json  developTest.py  develop_test.py  documentation.doc  example.py  extract_and_optimize.py  extract_optimized.py  extractionTest.py  extraction_test.py  goal.py  helper_functions.py  json_deoptimizer.py  json_optimizer.py  main.py  opcode_database.jsonc  opcode_database_old.json  optimized.json  optimized2.json  optimized3.json  parsing_test.py  precompiled.json  source.json  source2.json  source_extractor.py  speed_test.py  temp.json  temp.py  temp2.json  temp3.json  test.json  test.py  test2.py  validator.py  (+4 more)
temporary/: project.json
(+167 files in other folders)
