[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypenguin"  # Ensure this is unique on PyPI
version = "0.1.0"
authors = [
    { name = "Fritzforcode" }
]
description = "A Python package for optimizing, deoptimizing, and managing PenguinBlocks"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",  # Add required dependencies
]

[tool.setuptools]
packages = ["pypenguin"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pypenguin" = ["assets/*"]  # If you have non-Python files

[project.urls]
Homepage = "https://github.com/yourusername/PyPenguin"
Documentation = "https://pypenguin.readthedocs.io"
Repository = "https://github.com/yourusername/PyPenguin"
Issues = "https://github.com/yourusername/PyPenguin/issues"
